@@ -223,7 +223,7 @@ ADVICE_STATES_ENDED = ('advice_given', )
 # In those states, the meeting is not closed.
 MEETING_NOT_CLOSED_STATES = ('published', 'frozen', 'decided', 'decisions_published')
 # In those states, the meeting accept items, normal or late
-MEETING_STATES_ACCEPTING_ITEMS = ('created', 'frozen', 'published', 'decided')
+MEETING_STATES_ACCEPTING_ITEMS = ('created', 'frozen', 'published', 'decided', 'decisions_published')
 
 # Keys used in annotations
 SENT_TO_OTHER_MC_ANNOTATION_BASE_KEY = 'PloneMeeting-sent_to_other_meetingconfig_'
